Split MFA into OpenSSH w/ redhat patch an newer/standard OpenSSH (and thus add standard OpenSSH MFA documentation)

--- a/Security/Guidelines/OpenSSH.mediawiki
+++ b/Security/Guidelines/OpenSSH.mediawiki
@@ -117,6 +117,21 @@ It requires additional setup, such as using the [http://www.nongnu.org/oath-tool
 | In order to allow using one time passwords (OTPs) and any other text input, Keyboard-interactive is enabled in OpenSSH. This ''MAY'' allow for password authentication to work. It is therefore very important to check your PAM configuration so that PAM disallow password authentication for OpenSSH.
 |}
 
+==== OpenSSH 6.3+ (default) ====
+File: <code>/etc/ssh/sshd_config</code>
+<source>
+# IMPORTANT: you will have to ensure OpenSSH cannot authenticate with passwords with PAM in /etc/pam.d/sshd
+# "PasswordAuthentication no" is not sufficient!
+PubkeyAuthentication yes
+PasswordAuthentication no
+AuthenticationMethods publickey,keyboard-interactive:pam
+KbdInteractiveAuthentication yes
+UsePAM yes
+# Ensure /bin/login is not used so that it cannot bypass PAM settings for sshd.
+UseLogin no
+</source>
+
+==== OpenSSH 5.3+ w/ RedHat/CentOS patch (old) ====
 File: <code>/etc/ssh/sshd_config</code>
 <source>
 # Allow keyboard-interactive.
@@ -125,6 +140,7 @@ File: <code>/etc/ssh/sshd_config</code>
 RequiredAuthentications2 publickey,keyboard-interactive:skey
 PasswordAuthentication no
 ChallengeResponseAuthentication yes
+UsePAM yes
 # Ensure /bin/login is not used so that it cannot bypass PAM settings for sshd.
 UseLogin no
 </source>
@@ -229,6 +245,8 @@ When SSH keys are necessary for automation between systems, it is reasonable to 
 * The keys must be accessible only by the admin user (root) and/or the system user requiring access.
 * Usage of machine keys should be registered in an inventory (a wiki page, ldap, an inventory database), to allow for rapid auditing of key usage across an infrastructure.
 * The machine keys should be unique per usage. Each new usage (different service, different script called, etc.) should use a new, different key.
+* Only used when strictly necessary.
+* Restrict privileges of the account (i.e. no root or "sudoer" machine account).
 
 === Auditing your existing SSH keys ===
 
