Use chgrp instead of chown syntax for clarity, fixes https://github.com/mozilla/wikimo_opsec/pull/39#event-661943531 (thx reed)

--- a/Security/Guidelines/OpenSSH.mediawiki
+++ b/Security/Guidelines/OpenSSH.mediawiki
@@ -264,7 +264,7 @@ default.
 <source code="bash">
     # groupadd sftpusers
     # usermod -a -g sftpusers <userthat_needs_ftp>
-    # chown :sftpusers /usr/lib/ssh/sftp-server
+    # chgrp sftpusers /usr/lib/ssh/sftp-server
     # chmod 0750 /usr/lib/ssh/sftp-server
 </source>
 
